--- a/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-summary.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/checkout/_checkout-summary.scss
@@ -174,6 +174,7 @@
     &__promo {
         gap: 12px;
         margin-bottom: 2px;
+		flex-wrap: wrap;
 
 		.promo {
 			//styleName: Body 1;
@@ -184,6 +185,8 @@
 		}
 
 		.form-floating {
+			width: 100%;
+			max-width: 300px;
             margin-bottom: unset !important;
 			
 			.form-control {
