--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -730,7 +730,7 @@ a.refineLink {
         .ais-InfiniteHits-list {
                 display: grid;
                 grid-template-columns: repeat(3, minmax(0, 1fr));
-                @media screen and (max-width: 1124px) {
+                @media screen and (max-width: 1200px) {
                     grid-template-columns: repeat(2, minmax(0, 1fr));
                 }
 
@@ -796,34 +796,60 @@ a.refineLink {
                                 -webkit-line-clamp: 2;
                                 -webkit-box-orient: vertical;
                             }
+
+                            .list-inline {
+                                @media (max-width: 1400px) and (min-width: 1200px) {
+                                    max-width: calc(100% - 120px);
+                                }
+                            }
                             
                         }
                         .card-info {
-                            z-index: 2;
+                            // z-index: 2;
 
                             @media screen and (min-width: 768px) {
                                 width: 100%;
                             }
                         }
                         .card-price {
-                            z-index: 1;
+                            // z-index: 1;
 
                             @media screen and (min-width: 768px) {
-                                width: 100%;
+                                width: fit-content;
                                 text-align: right;
                                 position: absolute !important;
                                 bottom: 0;
                                 right: 0;
                             }
 
-                            @media screen and (max-width: 1366px) {
+                            @media screen and (max-width: 1200px) {
                                 width: 32%;
                             }
                         }
 
                         .card-footer {
-                            @media screen and (min-width: 768px) {
-                                display: none;
+                            position: relative !important;
+                            padding-bottom: 0;
+                            padding-left: 0;
+                            padding-right: 0;
+                            @media screen and (min-width: 768px) { 
+                                // display: none;
+                            }
+
+                            @media screen and (min-width: 1200px) {
+                                padding-top: 4px;
+                                .quick-view-button {
+                                    padding: 0.3rem 0.7rem;
+                                    font-size: 14px;
+                                }
+                            }
+
+                            @media (max-width: 1400px) and (min-width: 1200px) {
+                                .quick-view-button {
+                                    i {
+                                        margin-right: 3px;
+                                    }
+                                }
                             }
                         }
                     }
@@ -905,6 +931,34 @@ a.refineLink {
         padding-left: calc(var(--bs-gutter-x)* 0.5);
         padding-top: 15px;
         padding-bottom: 15px;
+    }
+
+    .quick-view-button {
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #212529;
+        border: 1px solid #212529;
+        border-radius: 0.375rem;
+        text-decoration: none;
+        transition: all ease 0.3s;
+        width: max-content;
+        display: block;
+
+        i {
+            margin-right: 8px;
+        }
+
+        &:hover {
+            background-color: #212529;
+            color: white;
+        }
+    }
+}
+.search {
+    .algolia-search-box-wrapper {
+        top: 0 !important;
     }
 }
 .search {
@@ -1015,5 +1069,18 @@ a.refineLink {
         h2 {
             font-weight: 500;
         }
+    }
+}
+
+body.archive .blockUI.blockOverlay::before,
+body.search .blockUI.blockOverlay::before {
+    content: unset;
+    display: none;
+}
+
+#quickLookModal {
+    .blockUI.blockMsg.blockElement{
+        left: 50% !important;
+        top: 50% !important;
     }
 }
