--- a/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
@@ -453,7 +453,7 @@
     border-color: #b5b5b5;
     border-radius: 5px;
     border: 1px solid #b5b5b5 !important;
-    background-color: #f4f4f4;
+    background-color: #fff;
     overflow: hidden;
 
     .calendar-table {
@@ -465,7 +465,7 @@
 
     button {
       color: var(--bs-accordion-btn-color);
-      background-color: #f4f4f4;
+      background-color: #fff;
 
       &::after {
         background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' class='bi bi-plus-lg' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z'/%3E%3C/svg%3E");
@@ -482,6 +482,7 @@
   .modal-content {
     overflow: hidden;
     height: 93vh;
+    background-color: #f4f4f4;
   }
 
   .modal-header {
