Algolia Filters: Rename the Clear all button on the archive and search pages to Clear Filters
Asana Task: https://app.asana.com/0/1205472772784381/1208667154625911/f

--- a/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
@@ -379,7 +379,7 @@
         bottom: 19px;
       }
       &::after{
-        content:'Clear all'; 
+        content:'Clear Filters'; 
         visibility: visible;
         display: block;
         background: transparent;
