Fix the filters modal height - mobile (#539)
Co-authored-by: Polina Todorova <ptodorova@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_modal.scss
@@ -482,6 +482,10 @@
   .modal-content {
     overflow: hidden;
     height: 93vh;
+
+    @media (max-width: 767px) {
+      height: 83vh;
+    }
     background-color: #f4f4f4;
   }
 
