--- a/wp-content/themes/trek-travel-theme/src/scss/_header.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_header.scss
@@ -132,6 +132,20 @@
       line-height: 24px;
     }
   }
+
+  .footerCurrencySelector {
+    #currency_converter {
+      select {
+        width: 80px;
+        height: 42px;
+        font-size: 16px;
+      }
+    }
+
+    @media (max-width: 767.98px) {
+      margin: 0;
+    }
+  } 
 }
 
 .desktop-nav{
