--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -784,9 +784,32 @@ a.refineLink {
                                 font-size: 20px;
                                 line-height: 30px;
 
+                                .current-currency {
+                                    font-size: 18px;
+                                }
                                 @media screen and (max-width: 1366px) {
                                     font-size: 18px;
                                     line-height: 30px;
+
+                                    .current-currency {
+                                        font-size: 16px;
+                                    }
+                                }
+                                @media screen and (max-width: 1200px) {
+                                    font-size: 14px;
+                                    line-height: 30px;
+
+                                    .current-currency {
+                                        font-size: 12px;
+                                    }
+                                }
+                                @media screen and (max-width: 1124px) {
+                                    font-size: 18px;
+                                    line-height: 30px;
+
+                                    .current-currency {
+                                        font-size: 16px;
+                                    }
                                 }
                             }
                             
@@ -822,8 +845,8 @@ a.refineLink {
                                 right: 0;
                             }
 
-                            @media screen and (max-width: 1200px) {
-                                width: 32%;
+                            @media screen and (max-width: 1366px) {
+                                // width: 32%;
                             }
                         }
 
@@ -1083,4 +1106,22 @@ body.search .blockUI.blockOverlay::before {
         left: 50% !important;
         top: 50% !important;
     }
+}
+
+// Style the currency suffix.
+.current-currency {
+    .checkout-summary__font & {
+        // Same as the class .fs-lg.
+        // font-size: $font-size-lg;
+        margin-left: 8px;
+    }
+    margin-left: 0.25rem;
+
+    & + * {
+        margin-right: 0.25rem;
+    }
+}
+
+.original-price-usd {
+    font-size: 18px;
 }
