--- a/wp-content/themes/trek-travel-theme/src/scss/_search.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_search.scss
@@ -855,6 +855,8 @@ a.refineLink {
                             padding-bottom: 0;
                             padding-left: 0;
                             padding-right: 0;
+                            display: flex;
+                            justify-content: flex-end;
                             @media screen and (min-width: 768px) { 
                                 // display: none;
                             }
