--- a/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_buttons.scss
@@ -99,7 +99,7 @@
     font-family: "Roboto", Sans-serif;
     font-size: 16px;
     font-weight: 500;
-    line-height: 24px;
+    line-height: normal;
     fill: #000000;
     color: #000000;
     background-color: #FFFFFF;
