--- a/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/my-account/_dashboard.scss
@@ -1,3 +1,12 @@
+.card-body {
+
+    .trips-box {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+}
+
 .dashboard {
     &__log {
         justify-content: space-between;
@@ -11,7 +20,7 @@
     }
     &__card {
         border-bottom: 4px solid $blue;
-        padding: 8px 4px 24px 4px;
+        padding: 0 0 20px;
         margin-bottom: 20px;
         border-top: unset;
         border-left: unset;
@@ -31,17 +40,36 @@
         margin-top: 16px;
     }
     &__trip {
+        flex-direction: column;
+        position: relative;
         gap: 16px;
-        padding: 24px 0px;
+        // padding: 24px 0px;
         &:not(:last-child) {
             border-bottom: 1px solid #D9D9D9;
         }
+
+        &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(180deg, rgba(255,255,255,0) 95%, rgba(40,170,225,1) 100%);
+            opacity: 0;
+            transition: opacity 0.3s ease; 
+        }
+        &:hover {
+            &::before {
+                opacity: 1;
+            }
+        }
         .my-upcoming-trips{
-            width: 112px;
-            height: 75px;
+            width: 100%;
+            height: 175px;
             img{
-                width: 112px;
-                height: 75px;
+                width: 100%;
+                height: 100%;
                 border-radius: 4px;
                 object-fit: cover;
             }
@@ -107,21 +135,16 @@
             margin-bottom: 24px;
         }
         &__card {
-            padding: 8px 8px 40px 8px;
+            // padding: 8px 8px 40px 8px;
         }
         &__trip {
             &:first-child {
                 padding: 8px 0px;
             }
             // padding: 24px 0px;
-            .my-upcoming-trips{
-                width: 144px;
-                height: 96px;
-                img{
-                    width: 144px;
-                    height: 96px;
-                }
-            }
+            // .my-upcoming-trips{
+            //     height: 175px;
+            // }
         }
     }
 }
