--- a/wp-content/themes/trek-travel-theme/src/scss/myaccount/_my-trips.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/myaccount/_my-trips.scss
@@ -2,34 +2,120 @@
     .card{
         padding: 16px;
     }
-    .trip-image{
-        width: 295px;
-        height: 200px;
-        img{
-            width: 295px;
-            height: 200px;
-            border-radius: 4px;
-            object-fit: cover;
-        }
+
+    .upcoming-title {
+        margin-bottom: 2rem;
     }
-    .trip-info{
-        a{
-            text-decoration: none;
-            &:hover{
-                color: inherit;
+
+    .trips-list-item{
+        display: flex;
+        justify-content: space-between;
+
+        .trip-box {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 30px;
+        }
+        .trip-info{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            h5 {
+                line-height: normal;
             }
-        }
-    }
-    .trip-details-cta{
-        a{
-            color: $white;
-        }
-        p{
+            p {
+                margin-bottom: 0;
+            }
+            .text-danger {
+                font-size: 20px;
+            }
             a{
-                color: $black !important;
+                &:hover{
+                    color: inherit;
+                }
+            }
+        }
+        .trip-image{
+            height: 275px;
+            img{
+                width: 100%;
+                height: 100%;
+                border-radius: 4px;
+                object-fit: cover;
+            }
+        }
+        .trip-details-cta{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            a {
+                color: $white;
+                white-space: nowrap;
+            }
+
+            p{
+                a{
+                    color: $black !important;
+                }
+            }
+        }
+
+        @include media-breakpoint-down(xl) {
+            .trip-box {
+            flex-direction: column;
+            align-items: flex-start;
+            }
+        }
+
+        @include media-breakpoint-down(lg) {
+            .trip-details-cta {
+                width: 100%;
             }
         }
     }
+
+    // .trip-image{
+    //     // width: 295px;
+    //     height: 225px;
+    //     img{
+    //         width: 100%;
+    //         height: 100%;
+    //         border-radius: 4px;
+    //         object-fit: cover;
+    //     }
+    // }
+
+    // .trip-box {
+    //     display: flex;
+    //     justify-content: space-between;
+    //     align-items: flex-start;
+    //     gap: 30px;
+    // }
+    // .trip-info {
+
+    //     h5 {
+    //         line-height: normal;
+    //     }
+    //     a{
+    //         &:hover{
+    //             color: inherit;
+    //         }
+    //     }
+
+        
+    // }
+    // .trip-details-cta{
+    //     a{
+    //         color: $white;
+    //     }
+    //     p{
+    //         a{
+    //             color: $black !important;
+    //         }
+    //     }
+    // }
     &__good-to-go-badge {
         &__img {
             width: 18px; margin-top: -2px; margin-right: 4px;
@@ -41,24 +127,28 @@
     @include media-breakpoint-up(lg) {
         .card{
             .past-title, .upcoming-title{
-                margin: 2rem 0 0 2rem;
+                margin: 2rem;
             }
         }
         .trips-list-item{
             display: flex;
-            gap: 2%;
-            margin: 2rem;
+            justify-content: space-between;
+            // gap: 2%;
+            // margin: 2rem;
             .trip-info{
-                flex-grow: 1;
-            }
-            .trip-image{
-                width: 227px;
-                height: 151px;
-                img{
-                    width: 227px;
-                    height: 151px;
+                h5 {
+                    line-height: normal;
                 }
+                // flex-grow: 1;
             }
+            // .trip-image{
+            //     width: 227px;
+            //     height: 151px;
+            //     img{
+            //         width: 227px;
+            //         height: 151px;
+            //     }
+            // }
         }
         .past-trip-item{
             .trip-details-cta{
@@ -81,4 +171,12 @@
             margin-left: 2rem;
         }
     }
+
+    @include media-breakpoint-down(md){
+        .trips-list-item{
+            gap: 15px;
+        }
+    }
+
+   
 }
