--- a/wp-content/themes/trek-travel-theme/src/scss/myaccount/_mytrips-checklist.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/myaccount/_mytrips-checklist.scss
@@ -140,28 +140,58 @@
         }
     }
 
-    .trip-checklist-desktop{
-        @include media-breakpoint-down(lg) {
-            display: none;
-        }
-        .trips-list-item{
+    .trip-checklist {
+        
+        .trips-list-item {
             display: flex;
-            gap: 2%;
-            margin: 2rem;
+            justify-content: space-between;
+
+            .trip-box {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                gap: 30px;
+            }
             .trip-info{
-                flex-grow: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                h5 {
+                    line-height: normal;
+                }
+                p {
+                    margin-bottom: 0;
+                }
             }
             .trip-image{
-                width: 227px;
-                height: 151px;
+                height: 275px;
                 img{
-                    width: 227px;
-                    height: 151px;
+                    width: 100%;
+                    height: 100%;
+                    border-radius: 4px;
+                    object-fit: cover;
                 }
             }
             .trip-details-cta{
-                @include media-breakpoint-up(xxl) {
-                    width: 188px;
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+
+                a {
+                    white-space: nowrap;
+                }
+            }
+
+            @include media-breakpoint-down(xl) {
+                .trip-box {
+                flex-direction: column;
+                align-items: flex-start;
+                }
+            }
+
+            @include media-breakpoint-down(lg) {
+                .trip-details-cta {
+                    width: 100%;
                 }
             }
         }
