Feature/header currency switcher (#571)
* Added currency to the price, checkout, currency switcher - header

* QA feedback - show current currency

* Fix the currency switcher on home page

* Fix the currency switcher - hover, currency symbol

* Currency Switcher: Add AUD and CAD after $ amounts across the site and in checkout
use the JS event triggered from the currency plugin at the end of the already converted and placed price, to add the suffix with the currency
Asana Task: https://app.asana.com/0/1205828450090907/1208662423299471/f

* Checkout/Order Summary: fix the fatal error when choosing to pay the full amount
make sure that the original price USD is float before using the number format for displaying
Asana Task: https://app.asana.com/0/1205828450090907/1208662423299471/f

* Header currency switcher - client feedback

* Fix the header currency switcher

* Fix the currency switcher

---------

Co-authored-by: Polina Todorova <ptodorova@devrix.com>

--- a/wp-content/themes/trek-travel-theme/src/scss/_header.scss
+++ b/wp-content/themes/trek-travel-theme/src/scss/_header.scss
@@ -18,6 +18,53 @@
     @media screen and (min-width: 769px) {
       display: block;
     }
+
+    .currency-switcher-header {
+      padding: 10px;
+      padding-right: 0;
+      padding-top: 9px;
+      .footerCurrencySelector {
+        display: flex;
+        align-items: center;
+        gap: 4px;
+        padding: 0 5px;
+        border: 1px solid black;
+        border-radius: 3px;
+        position: relative;
+
+        .currency-symbol  {
+          position: absolute;
+          left: 7px;
+          top: 50%;
+          transform: translateY(-50%);
+        }
+
+        .currency_switcher_label {
+          font-size: 12px;
+        }
+
+        select {
+          border: none !important;
+          width: auto !important;
+          color: black !important;
+          height: auto !important;
+          font-size: 12px !important;
+          outline: none;
+          padding: 0 !important;
+          padding-left: 15px !important;
+          padding-right: 7px !important;
+        }
+      }
+
+      &:hover {
+        color: var(--bs-nav-link-hover-color);
+        .footerCurrencySelector {
+          select {
+            color: var(--bs-nav-link-hover-color) !important;
+          }
+        }
+      }
+    }
   }
 
   &__search-account {
